discussion/kv_engine/161049/161049_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41018: Use Status::CheckpointNotFound instead of Status::NotFound

Magma uses Status::Code::NotFound in case of no checkpoints
being found for rollback. This code is not fatal in the
rollback case but it is also used in places like compaction
were it indicates a fatal error. Using CheckpointNotFound to
make sure other fatal error with the NotFound error code are logged.

Change-Id: If2acc24a7d072993829b22d52145e2fb00756a5a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-09-08 06:14:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-08 06:25:30.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33666/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43:
error: no member named "CheckpointNotFound" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33666/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39519/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(2303): error C2039: "CheckpointNotFound": is not a member of "magma::Status" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39519/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12082/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43: error: no member named "CheckpointNotFound" in "magma::Status" [clang-diagnostic-error]
        if (status.ErrorCode() != Status::CheckpointNotFound) {
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12082/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43:
error: no member named "CheckpointNotFound" in "magma::Status" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12082/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1725/ : FAILURE

Compile error at [2021-09-08T06:16:17.289Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43:
error: no member named "CheckpointNotFound" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1725/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14392/ : FAILURE

Compile error at [2021-09-08T06:17:49.479Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43:
error: no member named "CheckpointNotFound" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14392/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13933/ : FAILURE

Compile error at [2021-09-08T06:17:58.460Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43:
error: ?CheckpointNotFound? is not a member of ?magma::Status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13933/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12841/ : FAILURE

Compile error at [2021-09-08T06:17:20.751Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43:
error: no member named "CheckpointNotFound" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12841/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21891/ : FAILURE

Compile error at [2021-09-08T06:20:16.258Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43:
error: no member named "CheckpointNotFound" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21891/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1744/ : FAILURE

Compile error at [2021-09-08T06:17:17.336Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2303:43:
error: ?CheckpointNotFound? is not a member of ?magma::Status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1744/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10870/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13694/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Apaar gupta
Date: 2021-09-08 07:34:39.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
